fix body overflow

--- a/textile/style.css
+++ b/textile/style.css
@@ -1,16 +1,9 @@
 html {
-  width: 100vw;
   overflow-x: hidden;
 }
 .barshadow {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.06) !important;
 }
-.row {
-  overflow-x: hidden !important;
-  margin-left: 0 !important;
-  margin-right: 0 !important;
-}
-
 .logo {
   width: 155px;
   height: 50px;
